--- a/hw1.html
+++ b/hw1.html
@@ -4030,3 +4030,17 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 
 
 </body></html>
+<script>window.backupDefine = window.define; window.define = undefined;</script>
+<script type="text/javascript" src="quarto-preview.js"></script>
+<script>window.define = window.backupDefine; window.backupDefine = undefined;</script>
+<script type="text/javascript">
+  const options = {
+    origin: "",
+    search: "",
+    inputFile: "C:\Users\asm2f\Data Science\DS6030\Homeworks\hw1.qmd",
+    isPresentation: false
+  }
+  document.addEventListener("DOMContentLoaded", function () {
+    window.QuartoPreview.init(options);
+  });
+</script>
